[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ProgressHud.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
resource_name = "hide"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=1]
resource_name = "show"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="ProgressHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SecondPointPlayer" type="ColorRect" parent="."]
margin_left = -92.6996
margin_top = 0.142395
margin_right = -52.6996
margin_bottom = 40.1424
color = Color( 0, 0, 0, 0.627451 )

[node name="Indicator" type="ColorRect" parent="SecondPointPlayer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 38.0
color = Color( 0, 0, 1, 1 )

[node name="FirstPointPlayer" type="ColorRect" parent="."]
margin_left = -47.9874
margin_top = 0.427185
margin_right = -7.98737
margin_bottom = 40.4272
color = Color( 0, 0, 0, 0.627451 )

[node name="Indicator" type="ColorRect" parent="FirstPointPlayer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 38.0
color = Color( 0, 0, 1, 1 )

[node name="FirstPointAi" type="ColorRect" parent="."]
margin_left = 8.11658
margin_top = 0.427185
margin_right = 48.1166
margin_bottom = 40.4272
color = Color( 0, 0, 0, 0.627451 )

[node name="Indicator" type="ColorRect" parent="FirstPointAi"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 38.0
color = Color( 1, 0, 0, 1 )

[node name="SecondPointAi" type="ColorRect" parent="."]
margin_left = 53.8256
margin_top = -3.8147e-006
margin_right = 93.8256
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.627451 )

[node name="Indicator" type="ColorRect" parent="SecondPointAi"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 38.0
color = Color( 1, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 2 )
anims/show = SubResource( 1 )
